// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<td>
  <span
    className="little-spacer-right"
  >
    <QualifierIcon
      qualifier="TRK"
    />
  </span>
  <ForwardRef(Link)
    className="spacer-right"
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    Foo
  </ForwardRef(Link)>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders correctly: branch 1`] = `
<td>
  <BranchIcon
    className="little-spacer-right"
  />
  <ForwardRef(Link)
    className="spacer-right"
    to={
      {
        "pathname": "/dashboard",
        "search": "?branch=feature&id=foo",
      }
    }
  >
    Foo
    <span
      className="text-limited text-text-top"
      title="feature"
    >
      <span
        style={
          {
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      >
        /
      </span>
      feature
    </span>
  </ForwardRef(Link)>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders correctly: branch 2`] = `
<td>
  <BranchIcon
    className="little-spacer-right"
  />
  <ForwardRef(Link)
    className="spacer-right"
    to={
      {
        "pathname": "/dashboard",
        "search": "?branch=branch-6.7&id=foo",
      }
    }
  >
    Foo
    <span
      className="text-limited text-text-top"
      title="branch-6.7"
    >
      <span
        style={
          {
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      >
        /
      </span>
      branch-6.7
    </span>
  </ForwardRef(Link)>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders correctly: portfolio 1`] = `
<td>
  <span
    className="little-spacer-right"
  >
    <QualifierIcon
      qualifier="VW"
    />
  </span>
  <ForwardRef(Link)
    className="spacer-right"
    to={
      {
        "pathname": "/portfolio",
        "search": "?id=foo",
      }
    }
  >
    Foo
  </ForwardRef(Link)>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders correctly: pull request 1`] = `
<td>
  <PullRequestIcon
    className="little-spacer-right"
  />
  <ForwardRef(Link)
    className="spacer-right"
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo&pullRequest=pr-89",
      }
    }
  >
    Foo
    <span
      className="text-limited text-text-top"
    >
      <span
        style={
          {
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      >
        /
      </span>
      pr-89
    </span>
  </ForwardRef(Link)>
  <TaskType
    type="REPORT"
  />
</td>
`;

exports[`renders correctly: undefined key 1`] = `
<td>
  <span
    className="note"
  >
    AXR8jg_0mF2ZsYr8Wzs2
  </span>
  <TaskType
    type="REPORT"
  />
</td>
`;
